# Job-Journal

./: .gitignore  063giutiur8farhvrbbsraqlbspbtatm  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  infographic-prompt.md  kphqqneapl3fibfi3et85idprduumesj  manifest  pyproject.toml
.beads/: metadata.json
.beads/backup/: backup_state.json  config.jsonl
.claude/commands/: apply-assist.md  apply.md  cover-letter.md  fit.md  greenhouse.md  interview.md  jobs.md  learn.md  matched-resume.md  monitor.md  pipeline.md  research-brief.md  resume-eval.md  resume-refine.md  score.md  setup.md  slack-apply.md  stage-resume.md  start-today.md  swarm.md  twc.md  vc-boards.md
.github/workflows/: ci.yml
claude/commands/: apply.md  interview.md
docs/: comparison-interview-coach-skill.md  conventions.md  daily-workflow.md  getting-started-with-claude.md  getting-started.md  greenhouse.md  index.html  job-journal-infographic.html  job-journal-journey.html  nano-banana-prompts.md  pipeline-architecture-v1-2.md  pipeline-refinement-notes.md  services.md  slack-bot-setup.md  system-overview.md
jj/: __init__.py  analytics.py  ats_scanner.py  autofill.py  cli.py  config.py  corpus.py  db.py  email_domains.yaml  geo.py  gmail_checker.py  google_docs.py  greenhouse.py  investor_boards_data.py  notifier.py  parser.py  resume_gen.py  resume_import.py  scoring.py  slack_bot.py  target_companies_data.py  worker.py
jj/notes/: ats-job-monitoring.md
scripts/: dashboard-launcher.sh  diagnose_template.py  digest-launcher.sh  email-sync-launcher.sh  eval_ab.py  migrate_msk_corpus.py  monitor-launcher.sh  regen_archetypes.py  slack-bot-launcher.sh
tests/: test_matched_resume.py  test_smoke.py
(+23 files in other folders)
